# ldline

./: .gitignore  CMakeLists.txt  README.md
src/lib/: libldline.c  libldline.h
src/main/: ldline.c
